--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
 OPENAI_API_KEY=your-openai-api-key
 
-milvus_uri = https://example.zillizcloud.com:19544
-milvus_user = user
-milvus_password = ******
+milvus_uri=https://example.zillizcloud.com:19544
+milvus_user=user
+milvus_password=******
+
+OPENAI_PROXY=http://******
