--- a/.env.template
+++ b/.env.template
@@ -3,5 +3,6 @@ OPENAI_API_KEY=your-openai-api-key
 milvus_uri=https://example.zillizcloud.com:19544
 milvus_user=user
 milvus_password=******
+milvus_collection_ttl=0
 
 OPENAI_PROXY=http://******
