--- a/.env.template
+++ b/.env.template
@@ -5,11 +5,12 @@ OPENAI_API_KEY=your-openai-api-key
 milvus_uri=https://example.zillizcloud.com:19544
 milvus_user=user
 milvus_password=******
-milvus_collection_ttl=0 #集合的生命周期,为0则不设置生命周期
+milvus_collection_ttl=0 #The lifecycle of a collection. If set to 0, no lifecycle is set.
 
 # 各种向量算法使用不同的维度,更新vector_embeddings的时候需要更新集合名字和维度大小
 milvus_collection_name=bert_vector_code
 
 #默认语义向量使用Sentence-BERT,如果需要使用openai,则改成openai
 vector_embeddings=Sentence-BERT
+#支持代理,不用代码可以不配置
 OPENAI_PROXY=http://******
