--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
 
 OPENAI_API_KEY=your-openai-api-key
+temperature=0.3
+model=text-davinci-003
 
 # your milvus config
 milvus_uri=https://example.zillizcloud.com:19544
