--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 uploads/
+.vscode
+
+doc/设计思路.md
+src/__init__.py
+src/utils
+test
