support set milvus distance

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,7 @@ model=text-davinci-003
 milvus_uri=https://example.zillizcloud.com:19544
 milvus_user=user
 milvus_password=******
+milvus_distance=1
 milvus_collection_ttl=0 #The lifecycle of a collection. If set to 0, no lifecycle is set.
 
 # 各种向量算法使用不同的维度,更新vector_embeddings的时候需要更新集合名字和维度大小
