support huggingface model

--- a/.env.template
+++ b/.env.template
@@ -11,9 +11,16 @@ milvus_distance=1
 milvus_collection_ttl=0 #The lifecycle of a collection. If set to 0, no lifecycle is set.
 
 # 各种向量算法使用不同的维度,更新vector_embeddings的时候需要更新集合名字和维度大小
+# 集合名为字母+数字+下划线
 milvus_collection_name=bert_vector_code
 
-#默认语义向量使用Sentence-BERT,如果需要使用openai,则改成openai
-vector_embeddings=Sentence-BERT
+
 #支持代理,不用代码可以不配置
 OPENAI_PROXY=http://******
+#支持中文和英文，中文为CN，默认为英文
+semantics_language=EN
+
+#支持huggerface提供的所有模型,如果需要使用openai,则改成openai
+#中文可以选择shibing624/text2vec-base-chinese，维度768
+vector_embeddings=bert-base-uncased
+vector_dim=768  #模型生成的向量维度
